Major structural and design changes to the returns report

--- a/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
+++ b/src/app/Returns/Toolbox-and-L2/main-returns-toolbox/main-returns-toolbox.component.html
@@ -1,4 +1,4 @@
-<div (clickOutside)="closeToolbox()">
+<!-- <div (clickOutside)="closeToolbox()"> -->
 
   <!--<><><> Main Toolbox <><><>-->
   <button title="Tools" (click)="toggle(1)" id="toolboxBtn" class="btn toolboxButtonCollection" [ngClass]="{
@@ -79,4 +79,4 @@
       </mat-tab-group>
     </div>
   </div>
-</div>
+<!-- </div> -->
