--- a/src/app/toolbar/main-returns-toolbar/main-returns-toolbar.component.html
+++ b/src/app/toolbar/main-returns-toolbar/main-returns-toolbar.component.html
@@ -1,7 +1,7 @@
-<button id="toolbarBackBtn" class="btn btn-sm" [disabled]="true">
+<!-- <button id="toolbarBackBtn" class="btn btn-sm" [disabled]="true">
   <i class="material-icons">chevron_left</i>
   <span>Back</span>
-</button>
+</button> -->
 <div>
   <button *ngIf="this._g.cwWidth < size_md" id="LwidgetScrollBtn" class="returnsToolbarScrollBtn btn btn-sm material-icons" (click)="scrollLeft()">
     chevron_left
