--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,46 +1,34 @@
 <app-toolbar></app-toolbar>
-<<<<<<< HEAD
-<app-main-returns-toolbox [client]="rowData[0].Client" ></app-main-returns-toolbox> 
+<app-main-returns-toolbox [client]="_g.rootReturns" ></app-main-returns-toolbox> 
 
 
-<table id="table1" mat-table [dataSource]="rowData" multiTemplateDataRows #PseudoDescription>
+<table id="table1" mat-table [dataSource]="_g.rootReturns" multiTemplateDataRows #PseudoDescription>
     <ng-container matColumnDef="Expand">
         <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
         <td mat-cell *matCellDef="let element" class="expandBtnColumn" > 
             <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn">
                 <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_expand_more' : 'mi_chevron_right'"  ></i>
                 <!-- [ngStyle]="{'visibility':CollapseListBtn(element) ? 'expand' : 'collapse'}" -->
-=======
-<table mat-table [dataSource]="_g.rootReturns" multiTemplateDataRows>
-    <ng-container matColumnDef="Expand">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button  (click)="NextLevel(_g.rootReturns[0], _g.rootReturns[0].MailTypeList)">
-                    <!-- [ngStyle]="{'background-color':ReadyToCollapseAll(_g.rootReturns[0].MailTypeList) ? 'red' : 'white' }" -->
-                <i class="material-icons">{{ CollapseAllBtn(_g.rootReturns[0].MailTypeList) }}</i></button>
-            <button mat-icon-button (click)="ToggleExpansion(element)">
-                <i class="material-icons">{{ CollapseListBtn(element) }}</i>
->>>>>>> 864ec3044d4f1e23aafb9b115c3ab54fefd6f3df
             </button> 
-            <button mat-icon-button  (click)="NextLevel(rowData[0], rowData[0].MailTypeList)" class="returnsExpCollBtn">
-                <i class="material-icons" [ngClass]="ReadyToCollapseAll(rowData[0].MailTypeList) ? 'mi_unfold_more' : 'mi_unfold_less'"></i>
+                <button mat-icon-button  (click)="NextLevel(_g.rootReturns[0], _g.rootReturns[0].MailTypeList)" class="returnsExpCollBtn">
+                    <i class="material-icons" [ngClass]="ReadyToCollapseAll(_g.rootReturns[0].MailTypeList) ? 'mi_unfold_more' : 'mi_unfold_less'"></i>
             </button>
+
         </td>
         <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
     </ng-container>
     <ng-container matColumnDef="Client">
-<<<<<<< HEAD
         <th mat-header-cell *matHeaderCellDef class="mailLevelColumn"> Client </th>
         <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
             'font-client-lg': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'collapse',
             'font-sm': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'expand'
         }"> {{element.Client}} </td>
-        <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{rowData[0].Client}} </td>
-=======
+        <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{_g.rootReturns[0].Client}} </td>
+        
+<!--         
         <th mat-header-cell *matHeaderCellDef> Client </th>
         <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
-        <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td>
->>>>>>> 864ec3044d4f1e23aafb9b115c3ab54fefd6f3df
+        <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
     </ng-container>
 
 
@@ -811,12 +799,4 @@
     <tr mat-row *matRowDef="let element; columns: clientDisplayedColumns;" class="example-element-row" [class.example-expanded-row]="element.Measure.Expanded">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-<<<<<<< HEAD
 </table>
-=======
-</table>
-<app-toolbar></app-toolbar>
-<app-main-returns-toolbox></app-main-returns-toolbox> 
-
-<!-- [startDate]="" [endDate]="" -->
->>>>>>> 864ec3044d4f1e23aafb9b115c3ab54fefd6f3df
