--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -1,101 +1,102 @@
-<table mat-table
-       [dataSource]="dataSource" multiTemplateDataRows
-       class="mat-elevation-z8">
-  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+<button (click)='HideList()'> Back </button>
+<table mat-table [dataSource]="ListPerformanceArr" multiTemplateDataRows>
+  <ng-container matColumnDef="Client">
+    <th mat-header-cell *matHeaderCellDef> Client </th>
+    <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
   </ng-container>
-
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.position}} </div>
-          <div class="example-element-symbol"> {{element.symbol}} </div>
-          <div class="example-element-name"> {{element.name}} </div>
-          <div class="example-element-weight"> {{element.weight}} </div>
-        </div>
-        <div class="example-element-description">
-          {{element.description}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div>
-      </div>
-    </td>
+  <ng-container matColumnDef="Phase">
+    <th mat-header-cell *matHeaderCellDef> Phase </th>
+    <td mat-cell *matCellDef="let element"> {{element.Phase}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
   </ng-container>
+  <ng-container matColumnDef="MailCode">
+    <th mat-header-cell *matHeaderCellDef> MailCode </th>
+    <td mat-cell *matCellDef="let element"> {{element.MailCode}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+  </ng-container>
+  <ng-container matColumnDef="Description">
+    <th mat-header-cell *matHeaderCellDef> Description </th>
+    <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+  </ng-container>
+  <ng-container matColumnDef="Recency">
+    <th mat-header-cell *matHeaderCellDef> Recency </th>
+    <td mat-cell *matCellDef="let element"> {{element.Recency}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+  </ng-container>
+  <ng-container matColumnDef="ExchangeFlag">
+    <th mat-header-cell *matHeaderCellDef> FF </th>
+    <td mat-cell *matCellDef="let element"> {{element.ExchangeFlag}} </td>
+    <!-- <td mat-footer-cell *matFooterCellDef> Total {{_g.rootReturns[0].Client}} </td> -->
+  </ng-container>  <ng-container matColumnDef="Mailed">
+    <th mat-header-cell *matHeaderCellDef> Mailed </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Mailed | date:'shortDate'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Caged">
+    <th mat-header-cell *matHeaderCellDef> Caged </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Caged | date:'shortDate'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Quantity">
+    <th mat-header-cell *matHeaderCellDef> Qty </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Quantity | number}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Donors">
+    <th mat-header-cell *matHeaderCellDef> Don </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Donors | number}} </td>
+  </ng-container>
+  <ng-container matColumnDef="NonDonors">
+    <th mat-header-cell *matHeaderCellDef> Non </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.NonDonors | number}} </td>
+  </ng-container>
+  <ng-container matColumnDef="NewDonors">
+    <th mat-header-cell *matHeaderCellDef> New </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.NewDonors | number}} </td>
+  </ng-container>
+  <ng-container matColumnDef="RSP">
+    <th mat-header-cell *matHeaderCellDef> RSP </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.RSP | percent:'1.0-2'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="AVG">
+    <th mat-header-cell *matHeaderCellDef> AVG </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.AVG | number:'1.2-2'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Gross">
+    <th mat-header-cell *matHeaderCellDef> Gross </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Gross | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Cost">
+    <th mat-header-cell *matHeaderCellDef> Cost </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.Cost | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Net">
+    <th mat-header-cell *matHeaderCellDef> Net </th>
+    <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.Net < 0">
+      {{element.Measure.Net | currency : 'USD' : 'symbol' : '1.0-0'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="GPP">
+    <th mat-header-cell *matHeaderCellDef> GPP </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.GPP | currency}} </td>
+  </ng-container>
+  <ng-container matColumnDef="CLM">
+    <th mat-header-cell *matHeaderCellDef> CLM </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.CLM | currency}} </td>
+  </ng-container>
+  <ng-container matColumnDef="NLM">
+    <th mat-header-cell *matHeaderCellDef> NLM </th>
+    <td mat-cell *matCellDef="let element" [class.negative]="element.Measure.NLM < 0">
+      {{element.Measure.NLM | currency}} </td>
+  </ng-container>
+  <ng-container matColumnDef="IO">
+    <th mat-header-cell *matHeaderCellDef> IO </th>
+    <td mat-cell *matCellDef="let element"> {{element.Measure.IO | number : '1.2-2'}} </td>
+  </ng-container>
+  <!-- <ng-container matColumnDef="AvgPackageIO">
+    <th mat-header-cell *matHeaderCellDef> Package I/O </th>
+    <td mat-cell *matCellDef="let element"> {{element.AvgPackageIO | number : '1.2-2'}} </td>
+  </ng-container> -->
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = element">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-</table>
-
-<!-- <div id="page" style="margin-top:50px">
-<table style="width:100%">
-  <tr>
-    <td *ngIf="ListOwner > 0">List Onwer: {{ ListPerformanceArr[0].ListOwnerName }}</td>
-  </tr>
-  <tr>
-    <td *ngIf="ListManager > 0">List Manager: {{ ListPerformanceArr[0].ListManagerName }}</td>
-  </tr>
-  <tr>
-    <td *ngIf="Recency > 0">Recency: {{ ListPerformanceArr[0].Recency }}</td>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;">
   </tr>
 </table>
-<br>
-<table id="listperformance" class="display" [hidden]="!DataReady" style="width:100%">
-  <thead>
-    <tr>
-      <th>Client</th>
-      <th>Package</th>
-      <th>Mail Code</th>
-      <th>Description</th>
-      <th>Flag</th>
-      <th>Mailed</th>
-      <th>Caged</th>
-      <th>Quantity</th>
-      <th>Donors</th>
-      <th>Non</th>
-      <th>New</th>
-      <th>RSP</th>
-      <th>AVG</th>
-      <th>Gross</th>
-      <th>Cost</th>
-      <th>Net</th>
-      <th>GPP</th>
-      <th>CLM</th>
-      <th>NLM</th>
-      <th>IO</th>
-      <th>Package</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let list of ListPerformanceArr">
-      <td> {{ list?.Client }} </td>
-      <td> {{ list?.Phase }} </td>
-      <td> {{ list?.MailCode }} </td>
-      <td> {{ list.Description }} </td>
-      <td> {{ list.ExchangeFlag }} </td>
-      <td>{{ list.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ list.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ list.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ list.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ list.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ list.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ list.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ list.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ list.Measure.IO | number : '1.0-2' }}</td>
-      <td>{{ list.AvgPackageIO | number : '1.0-2' }} </td>
-    </tr>
-  </tbody>
-</table>
-</div> -->
