--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
-<app-main-returns-toolbox [client]="_g.rootReturns" ></app-main-returns-toolbox> 
+<app-main-returns-toolbox></app-main-returns-toolbox> 
 
 
 <table id="table1" mat-table [dataSource]="_g.rootReturns" multiTemplateDataRows #PseudoDescription>
@@ -9,10 +9,10 @@
             <button mat-icon-button (click)="ToggleExpansion(element)" class="returnsExpCollBtn">
                 <i class="material-icons" [ngClass]="CollapseListBtn(element) ? 'mi_expand_more' : 'mi_chevron_right'"  ></i>
                 <!-- [ngStyle]="{'visibility':CollapseListBtn(element) ? 'expand' : 'collapse'}" -->
-            </button> 
+                </button>
                 <button mat-icon-button  (click)="NextLevel(_g.rootReturns[0], _g.rootReturns[0].MailTypeList)" class="returnsExpCollBtn">
                     <i class="material-icons" [ngClass]="ReadyToCollapseAll(_g.rootReturns[0].MailTypeList) ? 'mi_unfold_more' : 'mi_unfold_less'"></i>
-            </button>
+                </button>
 
         </td>
         <td mat-footer-cell *matFooterCellDef class="expandBtnColumn"> </td>
@@ -20,8 +20,8 @@
     <ng-container matColumnDef="Client">
         <th mat-header-cell *matHeaderCellDef class="mailLevelColumn"> Client </th>
         <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
-            'font-client-lg': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'collapse',
-            'font-sm': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'expand'
+            'font-client-lg': GetVisibilityStyle(! _g.rootReturns[0].Measure.Expanded) == 'collapse',
+            'font-sm': GetVisibilityStyle(! _g.rootReturns[0].Measure.Expanded) == 'expand'
         }"> {{element.Client}} </td>
         <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{_g.rootReturns[0].Client}} </td>
         
