--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
-<app-main-returns-toolbox [client]="_g.rootReturns" ></app-main-returns-toolbox> 
+<app-main-returns-toolbox></app-main-returns-toolbox> 
 <div *ngIf='!_g.showlistperformance'>
 
 <table id="table1" mat-table [dataSource]="_g.rootReturns" multiTemplateDataRows #PseudoDescription>
@@ -20,10 +20,10 @@
     <ng-container matColumnDef="Client">
         <th mat-header-cell *matHeaderCellDef class="mailLevelColumn"> Client </th>
         <td mat-cell *matCellDef="let element" class="mailLevelColumn" [ngClass]="{
-            'font-client-lg': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'collapse',
-            'font-sm': GetVisibilityStyle(! rowData[0].Measure.Expanded) == 'expand'
-        }"> {{element.Client}} </td>
-        <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{_g.rootReturns[0].Client}} </td>
+            'font-client-lg': GetVisibilityStyle(! _g.rootReturns[0].Measure.Expanded) == 'collapse',
+            'font-sm': GetVisibilityStyle(! _g.rootReturns[0].Measure.Expanded) == 'expand'
+        }"> {{ _g.clientName }} </td>
+        <td mat-footer-cell *matFooterCellDef class="mailLevelColumn"> Total {{ _g.clientName }} </td>
         
 <!--         
         <th mat-header-cell *matHeaderCellDef> Client </th>
@@ -633,7 +633,8 @@
                                                                                             <th mat-header-cell *matHeaderCellDef class="descriptionColumn">
                                                                                                 Description
                                                                                             </th>
-                                                                                            <td mat-cell *matCellDef="let element" class="descriptionColumn">{{element.MailDescription}}
+                                                                                            <td mat-cell *matCellDef="let element" class="descriptionColumn"
+                                                                                            (click)="NavigateToListPerformance(element.ListOwner, element.ListManager, element.Recency, startDate, endDate)">{{element.MailDescription}}
                                                                                             </td>
                                                                                             <td mat-footer-cell *matFooterCellDef class="descriptionColumn"></td>
                                                                                         </ng-container>
